--- a/www/src/css/main.css
+++ b/www/src/css/main.css
@@ -262,7 +262,6 @@ svg {
 
 .room-control-container {
     display: flex;
-    padding-top: 0.5rem;
     padding-left: 0.5rem;
     padding-right: 0.5rem;
     min-height: 4rem;
